# ModernCDevEnvTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: math_utils.h
src/: main.c  math_utils.c
test/: test_math_utils.c
test/unity/: unity.c  unity.h
